--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.20.2)
 project(ece_city_3h C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(ece_city_3h main.c)
+add_executable(ece_city_3h main.c test.c test.h)
