Menu final et image

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.20.2)
 
 project(ece_city_3h C)
 
@@ -23,7 +23,7 @@ if (NOT raylib_FOUND) # If there's none, fetch and build raylib
 endif()
 
 # Our Project
-add_executable(${PROJECT_NAME} main.c "structure et macros/STRUCTURE.h" "structure et macros/macros.h" fonction/chargement.c fonction/chargement.h fonction/affichage.c fonction/affichage.h "structure et macros/include.h" fonction/evolution.c fonction/evolution.h fonction/calcul.c fonction/calcul.h test.c test.h fonction/sauvegarde.c fonction/sauvegarde.h)
+add_executable(${PROJECT_NAME} main.c "structure et macros/STRUCTURE.h" "structure et macros/macros.h" fonction/chargement.c fonction/chargement.h fonction/affichage.c fonction/affichage.h "structure et macros/include.h" fonction/evolution.c fonction/evolution.h fonction/calcul.c fonction/calcul.h test.c test.h fonction/sauvegarde.c fonction/sauvegarde.h menu.c menu.h)
 #set(raylib_VERBOSE 1)
 target_link_libraries(${PROJECT_NAME} raylib)
 
